// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CancelOrderContainer /> should not render when modal is closed 1`] = `null`;

exports[`<CancelOrderContainer /> should render a spinner when missing data 1`] = `
<div
  data-testid="Modal"
>
  <form
    class=""
  >
    <div
      class="footer modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Keep order
      </button>
      <div
        class="ml-3"
      >
        <div
          class="container spinner"
        >
          <div
            class="inner"
            style="min-height: 20px;"
          >
            <i
              class="icon-custom icon-circle-o-notch md-spin"
              style="font-size: 20px;"
            />
          </div>
        </div>
        <span
          class="ml-2"
        />
      </div>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="submit"
      >
        Cancel order
      </button>
    </div>
  </form>
</div>
`;

exports[`<CancelOrderContainer /> should render with a populated order table when data is populated 1`] = `
<div
  data-testid="Modal"
>
  <form
    class=""
  >
    <table
      class="table table table-hover"
    >
      <thead>
        <tr>
          <th>
            Product
          </th>
          <th>
            Item price
          </th>
          <th>
            Qty
          </th>
          <th>
            Item total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="container"
          >
            <div
              class="legend"
            >
              <div>
                <a
                  class="title"
                  href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766316567"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Acidulous candy
                </a>
              </div>
              <div
                class="subtitle"
              >
                Red / A
              </div>
              <div
                class="subtitle"
              >
                SKU: 
                0987654321-1
              </div>
            </div>
          </td>
          <td
            class="numberCol"
          >
            <div
              class="d-flex"
            >
              <div
                class="d-inline-block text-center"
              >
                <small
                  class="d-block text-muted"
                >
                  <del>
                    <span>
                      $1.00
                    </span>
                  </del>
                </small>
                <span>
                  $1.00
                </span>
              </div>
              <span
                class="times"
              >
                x
              </span>
            </div>
          </td>
          <td
            class="quantityCol"
          >
            <div
              class="input-group"
            >
              <span
                class="quantityContainer"
              >
                <input
                  class="quantityInput form-control"
                  pattern="\\\\d+"
                  type="text"
                  value="1"
                />
                <span
                  class="quantityMax"
                >
                  / 
                  1
                </span>
              </span>
              <div
                class="quantityButtonsContainer input-group-append"
              >
                <button
                  class="wrapper focusable quantityBtn quantityBtnUp secondary medium isDisabled"
                  disabled=""
                  tabindex="0"
                >
                  ▲
                </button>
                <button
                  class="wrapper focusable quantityBtn quantityBtnDown secondary medium"
                  tabindex="0"
                >
                  ▼
                </button>
              </div>
            </div>
          </td>
          <td
            class="numberCol"
          >
            <div
              class="d-flex"
            >
              <strong
                class="mt-auto mb-auto ml-auto"
              >
                <span>
                  $1.00
                </span>
              </strong>
            </div>
          </td>
        </tr>
        <tr>
          <td
            class="container"
          >
            <div
              class="legend"
            >
              <div>
                <a
                  class="title"
                  href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766349335"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Acidulous candy
                </a>
              </div>
              <div
                class="subtitle"
              >
                Red / B
              </div>
              <div
                class="subtitle"
              >
                SKU: 
                0987654321-2
              </div>
            </div>
          </td>
          <td
            class="numberCol"
          >
            <div
              class="d-flex"
            >
              <div
                class="d-inline-block text-center"
              >
                <small
                  class="d-block text-muted"
                >
                  <del>
                    <span>
                      $1.00
                    </span>
                  </del>
                </small>
                <span>
                  $1.00
                </span>
              </div>
              <span
                class="times"
              >
                x
              </span>
            </div>
          </td>
          <td
            class="quantityCol"
          >
            <div
              class="input-group"
            >
              <span
                class="quantityContainer"
              >
                <input
                  class="quantityInput form-control"
                  pattern="\\\\d+"
                  type="text"
                  value="4"
                />
                <span
                  class="quantityMax"
                >
                  / 
                  4
                </span>
              </span>
              <div
                class="quantityButtonsContainer input-group-append"
              >
                <button
                  class="wrapper focusable quantityBtn quantityBtnUp secondary medium isDisabled"
                  disabled=""
                  tabindex="0"
                >
                  ▲
                </button>
                <button
                  class="wrapper focusable quantityBtn quantityBtnDown secondary medium"
                  tabindex="0"
                >
                  ▼
                </button>
              </div>
            </div>
          </td>
          <td
            class="numberCol"
          >
            <div
              class="d-flex"
            >
              <strong
                class="mt-auto mb-auto ml-auto"
              >
                <span>
                  $4.00
                </span>
              </strong>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-12 order-2 col-xl-7 order-xl-1"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-lg-6"
            >
              <div
                class="form-group"
              >
                <label
                  class=""
                  for="amount"
                >
                  Refund with: Manual
                </label>
                <div
                  class="container amountInput"
                >
                  <span
                    class="leftLabel"
                    style="width: 2rem;"
                  >
                    $
                  </span>
                  <input
                    class="input form-control"
                    id="amount"
                    min="0"
                    required=""
                    step="0.01"
                    style="padding-left: 2rem;"
                    type="number"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="col-12 col-lg-6"
            >
              <div
                class="form-group"
              >
                <label
                  class=""
                  for="reason"
                >
                  Reason for canceling this order
                </label>
                <select
                  class="form-control"
                  id="reason"
                >
                  <option
                    value="customer"
                  >
                    Customer changed/canceled order
                  </option>
                  <option
                    value="fraud"
                  >
                    Fraudulent order
                  </option>
                  <option
                    value="inventory"
                  >
                    Items unavailable
                  </option>
                  <option
                    value="declined"
                  >
                    Payment declined
                  </option>
                  <option
                    value="other"
                  >
                    Other
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-12"
            >
              <div
                class="form-group"
              >
                <label
                  class=""
                  for="discrepancy-reason"
                >
                  Reason for custom refund amount
                </label>
                <select
                  class="discrepancyReasonInput form-control"
                  id="discrepancy-reason"
                >
                  <option
                    value="restock"
                  >
                    Restocking fee
                  </option>
                  <option
                    value="damage"
                  >
                    Damaged goods
                  </option>
                  <option
                    value="customer"
                  >
                    Customer satisfaction
                  </option>
                  <option
                    value="other"
                  >
                    Other
                  </option>
                </select>
                <small
                  class="form-text text-muted"
                >
                  The amount being refunded is different from the value of items being returned.
                </small>
              </div>
              <div
                class="mb-3 form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    type="checkbox"
                  />
                  <span
                    class="ml-1"
                  >
                    Restock items
                  </span>
                </label>
                <small
                  class="form-text text-muted"
                >
                  The claimed quantity for products in this order will be restocked back to your store.
                </small>
              </div>
              <div
                class="mb-3 form-check"
              >
                <label
                  class="form-check-label"
                  for="notify-customer"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    id="notify-customer"
                    type="checkbox"
                  />
                  <span
                    class="ml-1"
                  >
                    Send notification to customer
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mb-sm-4 col-12 order-1 col-xl-5 order-xl-2"
        >
          <dl
            class="row text-right mb-0"
          >
            <dt
              class="col-7 mb-2 grey"
            >
              Subtotal
            </dt>
            <dd
              class="col-5 mb-2"
            >
              <span>
                $0.00
              </span>
            </dd>
            <dt
              class="col-7 grey mb-2"
            >
              <label
                class="d-inline"
                for="shipping"
              >
                Shipping
                 
              </label>
            </dt>
            <dd
              class="col-5 mb-2"
            >
              —
            </dd>
            <dt
              class="col-7 mb-2 grey"
            >
              Discounts
            </dt>
            <dd
              class="col-5 mb-2"
            >
              —
            </dd>
            <dt
              class="col-7 mb-2 grey"
            >
              Tax
            </dt>
            <dd
              class="col-5 mb-2"
            >
              —
            </dd>
            <dt
              class="col-7 mb-2 grey"
            >
              Total available to refund
            </dt>
            <dd
              class="col-5 mb-2"
            >
              <span>
                $0.00
              </span>
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="footer modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Keep order
      </button>
      <button
        class="focusable ml-auto btn btn-primary"
        tabindex="0"
        type="submit"
      >
        Cancel order
      </button>
    </div>
  </form>
</div>
`;

exports[`<CancelOrderContainer /> should render with an empty order table when data is empty 1`] = `
<div
  data-testid="Modal"
>
  <form
    class=""
  >
    <table
      class="table table table-hover"
    >
      <thead>
        <tr>
          <th>
            Product
          </th>
          <th>
            Item price
          </th>
          <th>
            Qty
          </th>
          <th>
            Item total
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <div
      class="container container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-12 order-2 col-xl-7 order-xl-1"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-lg-6"
            >
              <div
                class="form-group"
              >
                <label
                  class=""
                  for="amount"
                >
                  Refund with: Manual
                </label>
                <div
                  class="container amountInput"
                >
                  <span
                    class="leftLabel"
                    style="width: 2rem;"
                  >
                    $
                  </span>
                  <input
                    class="input form-control"
                    id="amount"
                    min="0"
                    required=""
                    step="0.01"
                    style="padding-left: 2rem;"
                    type="number"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="col-12 col-lg-6"
            >
              <div
                class="form-group"
              >
                <label
                  class=""
                  for="reason"
                >
                  Reason for canceling this order
                </label>
                <select
                  class="form-control"
                  id="reason"
                >
                  <option
                    value="customer"
                  >
                    Customer changed/canceled order
                  </option>
                  <option
                    value="fraud"
                  >
                    Fraudulent order
                  </option>
                  <option
                    value="inventory"
                  >
                    Items unavailable
                  </option>
                  <option
                    value="declined"
                  >
                    Payment declined
                  </option>
                  <option
                    value="other"
                  >
                    Other
                  </option>
                </select>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-12"
            >
              <div
                class="form-group"
              >
                <label
                  class=""
                  for="discrepancy-reason"
                >
                  Reason for custom refund amount
                </label>
                <select
                  class="discrepancyReasonInput form-control"
                  id="discrepancy-reason"
                >
                  <option
                    value="restock"
                  >
                    Restocking fee
                  </option>
                  <option
                    value="damage"
                  >
                    Damaged goods
                  </option>
                  <option
                    value="customer"
                  >
                    Customer satisfaction
                  </option>
                  <option
                    value="other"
                  >
                    Other
                  </option>
                </select>
                <small
                  class="form-text text-muted"
                >
                  The amount being refunded is different from the value of items being returned.
                </small>
              </div>
              <div
                class="mb-3 form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    type="checkbox"
                  />
                  <span
                    class="ml-1"
                  >
                    Restock items
                  </span>
                </label>
                <small
                  class="form-text text-muted"
                >
                  The claimed quantity for products in this order will be restocked back to your store.
                </small>
              </div>
              <div
                class="mb-3 form-check"
              >
                <label
                  class="form-check-label"
                  for="notify-customer"
                >
                  <input
                    checked=""
                    class="form-check-input"
                    id="notify-customer"
                    type="checkbox"
                  />
                  <span
                    class="ml-1"
                  >
                    Send notification to customer
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mb-sm-4 col-12 order-1 col-xl-5 order-xl-2"
        >
          <dl
            class="row text-right mb-0"
          >
            <dt
              class="col-7 mb-2 grey"
            >
              Subtotal
            </dt>
            <dd
              class="col-5 mb-2"
            >
              <span>
                $0.00
              </span>
            </dd>
            <dt
              class="col-7 grey mb-2"
            >
              <label
                class="d-inline"
                for="shipping"
              >
                Shipping
                 
              </label>
            </dt>
            <dd
              class="col-5 mb-2"
            >
              —
            </dd>
            <dt
              class="col-7 mb-2 grey"
            >
              Discounts
            </dt>
            <dd
              class="col-5 mb-2"
            >
              —
            </dd>
            <dt
              class="col-7 mb-2 grey"
            >
              Tax
            </dt>
            <dd
              class="col-5 mb-2"
            >
              —
            </dd>
            <dt
              class="col-7 mb-2 grey"
            >
              Total available to refund
            </dt>
            <dd
              class="col-5 mb-2"
            >
              <span>
                $0.00
              </span>
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="footer modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Keep order
      </button>
      <button
        class="focusable ml-auto btn btn-primary"
        tabindex="0"
        type="submit"
      >
        Cancel order
      </button>
    </div>
  </form>
</div>
`;
